feat: Replace Copilot with Microsoft Defender management
REMOVED COPILOT SECTION:
- Microsoft Copilot APIs are admin center UI-only, no programmatic access
- Removed copilotManagement permission from AuthContext (5 locations)
- Removed Copilot navigation item from Layout.js
- Removed /copilot route from App.js
- Deleted src/components/copilot/ directory
- Deleted src/services/copilotService.js

ADDED MICROSOFT DEFENDER:
- Created src/services/defenderService.js with real Graph API integration
- Implemented 7 functions: getSecurityAlerts, getSecurityIncidents,
  getSecureScore, getSecurityRecommendations, getVulnerabilities,
  updateAlert, updateIncident
- Created DefenderManagement component with 5 tabs:
  * Security Alerts - Real-time alerts with filtering
  * Security Incidents - Correlated incidents with alert expansion
  * Secure Score - Current score with comparative analysis
  * Vulnerabilities - CVE tracking with severity breakdown
  * Recommendations - Prioritized security recommendations
- Added defenderManagement permission using SecurityEvents.Read.All
- Full demo mode support with comprehensive mock data
- Added navigation item and routing to Layout.js and App.js
- Added complete translations in English and Spanish

GRAPH API ENDPOINTS:
- /security/alerts_v2 - Security alerts
- /security/incidents - Security incidents
- /security/secureScores - Secure score
- /security/secureScoreControlProfiles - Recommendations
- /security/vulnerabilities - Vulnerability data

Unlike Copilot, Defender has full Graph API support for programmatic access.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -38,7 +38,7 @@
     "deviceManagement": "Device Management",
     "complianceManagement": "Compliance Management",
     "teamsManagement": "Teams Management",
-    "copilotManagement": "Copilot Management",
+    "defenderManagement": "Defender Management",
     "faq": "FAQ",
     "settings": "Settings",
     "appTitle": "Employee Life Cycle Portal"
@@ -139,6 +139,81 @@
     "pleaseSignInAgain": "Please sign in again to continue",
     "signingIn": "Signing in...",
     "signOut": "Sign Out"
+  },
+  "defender": {
+    "title": "Microsoft Defender Security Center",
+    "subtitle": "Monitor and respond to security threats across your organization",
+    "alerts": "Security Alerts",
+    "incidents": "Security Incidents",
+    "secureScore": "Secure Score",
+    "vulnerabilities": "Vulnerabilities",
+    "recommendations": "Security Recommendations",
+    "severity": {
+      "critical": "Critical",
+      "high": "High",
+      "medium": "Medium",
+      "low": "Low",
+      "informational": "Informational"
+    },
+    "status": {
+      "new": "New",
+      "inProgress": "In Progress",
+      "resolved": "Resolved",
+      "active": "Active"
+    },
+    "filters": {
+      "severity": "Severity",
+      "status": "Status",
+      "timeRange": "Time Range",
+      "all": "All"
+    },
+    "timeRanges": {
+      "24hours": "Last 24 hours",
+      "7days": "Last 7 days",
+      "30days": "Last 30 days",
+      "90days": "Last 90 days"
+    },
+    "loading": "Loading security data...",
+    "noAlerts": "No alerts found",
+    "noIncidents": "No incidents found",
+    "noRecommendations": "No recommendations available",
+    "noVulnerabilities": "No vulnerabilities detected",
+    "refresh": "Refresh",
+    "search": "Search alerts...",
+    "searchIncidents": "Search incidents...",
+    "category": "Category",
+    "source": "Source",
+    "created": "Created",
+    "updated": "Updated",
+    "recommended": "Recommended",
+    "relatedAlerts": "Related Alerts",
+    "determination": "Determination",
+    "assigned": "Assigned",
+    "unassigned": "Unassigned",
+    "unknown": "Unknown",
+    "currentScore": "Current Score",
+    "maxScore": "Maximum Score",
+    "outOf": "out of",
+    "points": "points",
+    "comparison": "Comparison to Other Organizations",
+    "average": "Average",
+    "securityControls": "Security Controls",
+    "monitoredServices": "Monitored Services",
+    "topVulnerabilities": "Top Vulnerabilities",
+    "cvssScore": "CVSS Score",
+    "affectedDevices": "Affected Devices",
+    "published": "Published",
+    "viewInDefender": "View in Microsoft 365 Defender",
+    "prioritizedActions": "Prioritized actions to improve your security posture",
+    "scoreImpact": "Score Impact",
+    "cost": "Implementation Cost",
+    "userImpact": "User Impact",
+    "product": "Product",
+    "impact": "Impact",
+    "configure": "Configure",
+    "updateSuccess": "Updated successfully",
+    "updateError": "Failed to update",
+    "loadError": "Failed to load data"
   },
   "errors": {
     "generic": "An error occurred. Please try again.",
