--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -30,7 +30,7 @@
     "deviceManagement": "Gestión de Dispositivos",
     "complianceManagement": "Gestión de Cumplimiento",
     "teamsManagement": "Gestión de Teams",
-    "copilotManagement": "Gestión de Copilot",
+    "defenderManagement": "Gestión de Defender",
     "faq": "Preguntas Frecuentes",
     "settings": "Configuración"
   },
@@ -109,6 +109,81 @@
     "pleaseSignIn": "Por favor, inicia sesión para acceder al portal",
     "sessionExpired": "Tu sesión ha expirado",
     "pleaseSignInAgain": "Por favor, inicia sesión nuevamente para continuar"
+  },
+  "defender": {
+    "title": "Centro de Seguridad de Microsoft Defender",
+    "subtitle": "Monitorear y responder a amenazas de seguridad en toda su organización",
+    "alerts": "Alertas de Seguridad",
+    "incidents": "Incidentes de Seguridad",
+    "secureScore": "Puntuación de Seguridad",
+    "vulnerabilities": "Vulnerabilidades",
+    "recommendations": "Recomendaciones de Seguridad",
+    "severity": {
+      "critical": "Crítico",
+      "high": "Alto",
+      "medium": "Medio",
+      "low": "Bajo",
+      "informational": "Informativo"
+    },
+    "status": {
+      "new": "Nuevo",
+      "inProgress": "En Progreso",
+      "resolved": "Resuelto",
+      "active": "Activo"
+    },
+    "filters": {
+      "severity": "Gravedad",
+      "status": "Estado",
+      "timeRange": "Rango de Tiempo",
+      "all": "Todos"
+    },
+    "timeRanges": {
+      "24hours": "Últimas 24 horas",
+      "7days": "Últimos 7 días",
+      "30days": "Últimos 30 días",
+      "90days": "Últimos 90 días"
+    },
+    "loading": "Cargando datos de seguridad...",
+    "noAlerts": "No se encontraron alertas",
+    "noIncidents": "No se encontraron incidentes",
+    "noRecommendations": "No hay recomendaciones disponibles",
+    "noVulnerabilities": "No se detectaron vulnerabilidades",
+    "refresh": "Actualizar",
+    "search": "Buscar alertas...",
+    "searchIncidents": "Buscar incidentes...",
+    "category": "Categoría",
+    "source": "Fuente",
+    "created": "Creado",
+    "updated": "Actualizado",
+    "recommended": "Recomendado",
+    "relatedAlerts": "Alertas Relacionadas",
+    "determination": "Determinación",
+    "assigned": "Asignado",
+    "unassigned": "No Asignado",
+    "unknown": "Desconocido",
+    "currentScore": "Puntuación Actual",
+    "maxScore": "Puntuación Máxima",
+    "outOf": "de",
+    "points": "puntos",
+    "comparison": "Comparación con Otras Organizaciones",
+    "average": "Promedio",
+    "securityControls": "Controles de Seguridad",
+    "monitoredServices": "Servicios Monitoreados",
+    "topVulnerabilities": "Principales Vulnerabilidades",
+    "cvssScore": "Puntuación CVSS",
+    "affectedDevices": "Dispositivos Afectados",
+    "published": "Publicado",
+    "viewInDefender": "Ver en Microsoft 365 Defender",
+    "prioritizedActions": "Acciones priorizadas para mejorar su postura de seguridad",
+    "scoreImpact": "Impacto en la Puntuación",
+    "cost": "Costo de Implementación",
+    "userImpact": "Impacto en el Usuario",
+    "product": "Producto",
+    "impact": "Impacto",
+    "configure": "Configurar",
+    "updateSuccess": "Actualizado exitosamente",
+    "updateError": "Error al actualizar",
+    "loadError": "Error al cargar datos"
   },
   "errors": {
     "generic": "Ocurrió un error",
